package org.edu.pradita.main.model.enums;

public enum PaymentStatus {
    pending,
    completed,
    failed
}